--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@ $(document).ready(function(){
 	})
 
 	$('.viewer')
+		//.click(toggleIndex)
 		.swipe({
 			swipeLeft: nextPage,
 			swipeRight: prevPage,
@@ -70,6 +71,15 @@ function showIndex(){
 function hideIndex(){
 	//$('.previews').fadeOut()
 	$('.previews').slideUp()
+}
+
+function toggleIndex(){
+	if($('.previews').css('display') == 'none'){
+		showIndex()
+	} else {
+		hideIndex()
+	}
+	return false
 }
 
 
