more minor edits...
Signed-off-by: Alex A. Naanou <alex.nanou@gmail.com>

--- a/index.html
+++ b/index.html
@@ -93,7 +93,11 @@ function toggleIndex(){
 					<div class="view A current">
 						<h1>Page A</h1>
 						<p>
-						some text...
+						The basic actions here are:<br>
+						<br><b>swipe right</b> &ndash; show next page.
+						<br><b>swipe left</b> &ndash; show previous page.
+						<br><b>swipe up</b> &ndash; show page index.
+						<br><b>swipe down</b> &ndash; hide page index.
 						</p>
 					</div>
 					<div class="view B">
