added some more info...
Signed-off-by: Alex A. Naanou <alex.nanou@gmail.com>

--- a/index.html
+++ b/index.html
@@ -101,7 +101,10 @@ function toggleIndex(){
 						</p>
 					</div>
 					<div class="view B">
-						<h2>Page B</h2>
+						<div style="height: 95%; width: 95%; margin: 2%; border: 5px dashed gray;">
+							<h2>Page B</h2>
+						</div>
+
 					</div>
 					<div class="view C">
 						<h2>Page C</h2>
