--- a/index.html
+++ b/index.html
@@ -65,12 +65,12 @@ function prevPage(){
 
 function showIndex(){
 	//$('.previews').fadeIn()
-	$('.previews').slideDown()
+	$('.previews').slideDown(100)
 }
 
 function hideIndex(){
 	//$('.previews').fadeOut()
-	$('.previews').slideUp()
+	$('.previews').slideUp(100)
 }
 
 function toggleIndex(){
