added an image as sample...
Signed-off-by: Alex A. Naanou <alex.nanou@gmail.com>

--- a/index.html
+++ b/index.html
@@ -107,6 +107,7 @@ function toggleIndex(){
 					</div>
 					<div class="view C">
 						<h2>Page C</h2>
+						<img src="img.jpg" height=100%""/>
 					</div>
 					<div class="view D">
 						<h2>Page D</h2>
