--- a/index.html
+++ b/index.html
@@ -107,7 +107,8 @@ function toggleIndex(){
 					</div>
 					<div class="view C">
 						<h2>Page C</h2>
-						<img src="img.jpg" height=100%""/>
+						<!-- images need caching... -->
+						<!--img src="img.jpg" height=100%""/-->
 					</div>
 					<div class="view D">
 						<h2>Page D</h2>
