several minor changes...
Signed-off-by: Alex A. Naanou <alex.nanou@gmail.com>

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@ function toggleIndex(){
 					<div class="view C">
 						<h2>Page C</h2>
 						<!-- images need caching... -->
-						<!--img src="img.jpg" height=100%""/-->
+						<img src="img.jpg"/>
 					</div>
 					<div class="view D">
 						<h2>Page D</h2>
