--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <link rel="stylesheet" href="layout.css">
 <script src="jquery.js"></script>
 <script src="jquery.touchSwipe.js"></script>
+<script src="jquery.exif.js"></script>
 
 <script>
 
@@ -108,7 +109,7 @@ function toggleIndex(){
 					<div class="view C">
 						<h2>Page C</h2>
 						<!-- images need caching... -->
-						<img src="img.jpg"/>
+						<img src="img.jpg" exif="true"/>
 					</div>
 					<div class="view D">
 						<h2>Page D</h2>
