--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@ function toggleIndex(){
 					<div class="view C">
 						<h2>Page C</h2>
 						<!-- images need caching... -->
-						<img src="img.jpg" exif="true"/>
+						<img src="img.jpg" exif="true" onclick="alert($(this).exifPretty())"/>
 					</div>
 					<div class="view D">
 						<h2>Page D</h2>
