add some place holders, remarks and noticises...
Signed-off-by: Alex A. Naanou <alex.nanou@gmail.com>

--- a/magazine.html
+++ b/magazine.html
@@ -1,7 +1,25 @@
 <html>
 <head>
-	<title>Magazine</title>
-	<link rel="stylesheet" href="magazine.css">
+<title>Magazine</title>
+<link rel="stylesheet" href="magazine.css">
+<script src="jquery.js"></script>
+<script>
+
+// XXX create magazine...
+function createMagazine(){
+}
+
+// XXX create article (magazine, title, position)...
+function createArticle(magazine, title){
+}
+
+// XXX create page (article, template, position)...
+function createPage(article, template){
+}
+
+
+
+</script>
 </head>
 <body>
 
@@ -10,11 +28,15 @@
 		Magazine Cover
 	</div>
 
+	<!-- XXX do we need a Magazine Credits page??? -->
+
 	<div class="article">
 		<div class="cover">
 			Article Cover<br>
 			some more text...
 		</div>
+
+		<!-- XXX do we need an Article Credits page??? -->
 
 		<div class="page">
 			Page
